seperate the admin and reader access
